--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Test PyPI
-      url: https://test.pypi.org/project/aiidalab/
+      url: https://test.pypi.org/project/aiidalab-eln/
 
     steps:
       - uses: actions/checkout@v2
@@ -56,7 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: PyPI
-      url: https://pypi.org/project/aiidalab/
+      url: https://pypi.org/project/aiidalab-eln/
 
     steps:
       - uses: actions/checkout@v2
