--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,9 @@ force_grid_wrap = 0
 use_parentheses = True
 ensure_newline_before_comments = True
 line_length = 88
+
+[flake8]
+ignore =
+    E501  # Line length handled by black.
+    W503  # Line break before binary operator, preferred formatting for black.
+    E203  # Whitespace before ':', preferred formatting for black.
