--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,43 @@
+[metadata]
+name = aiidalab_eln
+version = "0.1.1"
+description = Package that integrates AiiDAlab with Electronic Laboratory Notebooks.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/aiidalab/aiidalab-eln
+author = The AiiDAlab team
+author_email = aiidalab@materialscloud.org
+license = MIT
+license_file = LICENSE
+classifiers =
+    Framework :: AiiDA
+    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: MIT License",
+    Operating System :: MacOS :: MacOS X",
+    Operating System :: POSIX :: Linux",
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+
+[options]
+packages = find:
+install_requires =
+    aiida-core>=1.1.0,<2.0.0"
+    ase
+    cheminfopy>=0.6.0
+    ipywidgets
+    pytojcamp
+    requests
+python_requires = >=3.7
+
+[options.extras_require]
+dev =
+    bumpver==2021.1114
+    pre-commit==2.10.1
+
 [isort]
 multi_line_output = 3
 include_trailing_comma = True
