--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aiidalab_eln
-version = "0.1.1"
+version = attr: aiidalab_eln.version.__version__
 description = Package that integrates AiiDAlab with Electronic Laboratory Notebooks.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -51,3 +51,15 @@ ignore =
     E501  # Line length handled by black.
     W503  # Line break before binary operator, preferred formatting for black.
     E203  # Whitespace before ':', preferred formatting for black.
+
+[bumpver]
+current_version = "v0.1.1"
+version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
+commit_message = "Bump version {old_version} -> {new_version}."
+commit = True
+tag = True
+push = True
+
+[bumpver:file_patterns]
+aiidalab_eln/version.py =
+    __version__ = "{pep440_version}"
