--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,8 @@ license_file = LICENSE
 classifiers =
     Framework :: AiiDA
     License :: OSI Approved :: MIT License
-    License :: OSI Approved :: MIT License",
-    Operating System :: MacOS :: MacOS X",
-    Operating System :: POSIX :: Linux",
+    Operating System :: MacOS :: MacOS X
+    Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
