--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,10 @@ jobs:
         runs-on: ubuntu-latest
         if: startsWith(github.ref, 'refs/tags')
 
+        environment:
+            name: PyPI
+            url: https://pypi.org/project/aiidalab-eln/
+
         steps:
             - name: Checkout repository
               uses: actions/checkout@v2
@@ -24,8 +28,13 @@ jobs:
             - name: Install pypa/build
               run: python -m pip install build
 
-            - name: Build source distribution
-              run: python ./setup.py sdist
+            - name: Build a binary wheel and a source tarball
+              run: >-
+                  python -m
+                  build
+                  --sdist
+                  --wheel
+                  --outdir dist/
 
             - name: Create GitHub release
               uses: softprops/action-gh-release@v0.1.14
