--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    aiida-core>=1.1.0,<3"
+    aiida-core>=1.1.0,<3
     ase
     cheminfopy>=0.6.0
     ipywidgets
