Update widget with new cdxml.py location and new dependencies (pybis and aiidalab-widgets-empa)

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,8 @@ install_requires =
     ipywidgets
     pytojcamp
     requests
+    pybis
+    aiidalab-widgets-empa
 python_requires = >=3.8
 
 [options.extras_require]
