Implement openBIS connector (#84)
Co-authored-by: Fabio Lopes <fabioacl96@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,12 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    aiida-core>=1.1.0,<3
+    aiida-core>=2.0.0,<3.0.0
+    aiidalab-widgets-empa
     ase
     cheminfopy>=0.6.0
     ipywidgets
+    pybis
     pytojcamp
     requests
 python_requires = >=3.8
